--- a/Partitioned data/spllitiing.ipynb
+++ b/Partitioned data/spllitiing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -37,202 +37,257 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Project Code</th>\n",
-       "      <th>PQ #</th>\n",
-       "      <th>PO / SO #</th>\n",
-       "      <th>ASN/DN #</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Managed By</th>\n",
        "      <th>Fulfill Via</th>\n",
-       "      <th>Vendor INCO Term</th>\n",
        "      <th>Shipment Mode</th>\n",
-       "      <th>...</th>\n",
        "      <th>Unit of Measure (Per Pack)</th>\n",
        "      <th>Line Item Quantity</th>\n",
        "      <th>Line Item Value</th>\n",
        "      <th>Pack Price</th>\n",
        "      <th>Unit Price</th>\n",
-       "      <th>Manufacturing Site</th>\n",
        "      <th>First Line Designation</th>\n",
-       "      <th>Weight (Kilograms)</th>\n",
-       "      <th>Freight Cost (USD)</th>\n",
        "      <th>Line Item Insurance (USD)</th>\n",
+       "      <th>Scheduled Delivery Date Year</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Manufacturing Site_Ranbaxy per Shasun Pharma Ltd</th>\n",
+       "      <th>Manufacturing Site_Ranbaxy, Paonta Shahib, India</th>\n",
+       "      <th>Manufacturing Site_Remedica, Limassol, Cyprus</th>\n",
+       "      <th>Manufacturing Site_Roche Basel</th>\n",
+       "      <th>Manufacturing Site_Roche Madrid</th>\n",
+       "      <th>Manufacturing Site_Standard Diagnostics, Korea</th>\n",
+       "      <th>Manufacturing Site_Strides, Bangalore, India.</th>\n",
+       "      <th>Manufacturing Site_Trinity Biotech, Plc</th>\n",
+       "      <th>Manufacturing Site_Weifa A.S., Hausmanngt. 6, P.O. Box 9113 GrÃ¸nland, 0133, Oslo, Norway</th>\n",
+       "      <th>Manufacturing Site_bioLytical Laboratories</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>100-CI-T01</td>\n",
-       "      <td>Pre-PQ Process</td>\n",
-       "      <td>SCMS-4</td>\n",
-       "      <td>ASN-8</td>\n",
-       "      <td>Côte d'Ivoire</td>\n",
-       "      <td>PMO - US</td>\n",
-       "      <td>Direct Drop</td>\n",
-       "      <td>EXW</td>\n",
+       "      <td>0</td>\n",
        "      <td>Air</td>\n",
-       "      <td>...</td>\n",
        "      <td>30</td>\n",
        "      <td>19</td>\n",
        "      <td>551.0</td>\n",
        "      <td>29.00</td>\n",
        "      <td>0.97</td>\n",
-       "      <td>Ranbaxy Fine Chemicals LTD</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>13</td>\n",
-       "      <td>780.34</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>241.243885</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>108-VN-T01</td>\n",
-       "      <td>Pre-PQ Process</td>\n",
-       "      <td>SCMS-13</td>\n",
-       "      <td>ASN-85</td>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>PMO - US</td>\n",
-       "      <td>Direct Drop</td>\n",
-       "      <td>EXW</td>\n",
+       "      <td>0</td>\n",
        "      <td>Air</td>\n",
-       "      <td>...</td>\n",
        "      <td>240</td>\n",
        "      <td>1000</td>\n",
        "      <td>6200.0</td>\n",
        "      <td>6.20</td>\n",
        "      <td>0.03</td>\n",
-       "      <td>Aurobindo Unit III, India</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>358</td>\n",
-       "      <td>4521.5</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>241.243885</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>100-CI-T01</td>\n",
-       "      <td>Pre-PQ Process</td>\n",
-       "      <td>SCMS-20</td>\n",
-       "      <td>ASN-14</td>\n",
-       "      <td>Côte d'Ivoire</td>\n",
-       "      <td>PMO - US</td>\n",
-       "      <td>Direct Drop</td>\n",
-       "      <td>FCA</td>\n",
+       "      <td>0</td>\n",
        "      <td>Air</td>\n",
-       "      <td>...</td>\n",
        "      <td>100</td>\n",
        "      <td>500</td>\n",
        "      <td>40000.0</td>\n",
        "      <td>80.00</td>\n",
        "      <td>0.80</td>\n",
-       "      <td>ABBVIE GmbH &amp; Co.KG Wiesbaden</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>171</td>\n",
-       "      <td>1653.78</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>241.243885</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>15</td>\n",
-       "      <td>108-VN-T01</td>\n",
-       "      <td>Pre-PQ Process</td>\n",
-       "      <td>SCMS-78</td>\n",
-       "      <td>ASN-50</td>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>PMO - US</td>\n",
-       "      <td>Direct Drop</td>\n",
-       "      <td>EXW</td>\n",
+       "      <td>0</td>\n",
        "      <td>Air</td>\n",
-       "      <td>...</td>\n",
        "      <td>60</td>\n",
        "      <td>31920</td>\n",
        "      <td>127360.8</td>\n",
        "      <td>3.99</td>\n",
        "      <td>0.07</td>\n",
-       "      <td>Ranbaxy, Paonta Shahib, India</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>1855</td>\n",
-       "      <td>16007.06</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>241.243885</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>16</td>\n",
-       "      <td>108-VN-T01</td>\n",
-       "      <td>Pre-PQ Process</td>\n",
-       "      <td>SCMS-81</td>\n",
-       "      <td>ASN-55</td>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>PMO - US</td>\n",
-       "      <td>Direct Drop</td>\n",
-       "      <td>EXW</td>\n",
+       "      <td>0</td>\n",
        "      <td>Air</td>\n",
-       "      <td>...</td>\n",
        "      <td>60</td>\n",
        "      <td>38000</td>\n",
        "      <td>121600.0</td>\n",
        "      <td>3.20</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>Aurobindo Unit III, India</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>7590</td>\n",
-       "      <td>45450.08</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>241.243885</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
+       "<p>5 rows × 772 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ID Project Code            PQ # PO / SO # ASN/DN #        Country  \\\n",
-       "0   1   100-CI-T01  Pre-PQ Process    SCMS-4    ASN-8  Côte d'Ivoire   \n",
-       "1   3   108-VN-T01  Pre-PQ Process   SCMS-13   ASN-85        Vietnam   \n",
-       "2   4   100-CI-T01  Pre-PQ Process   SCMS-20   ASN-14  Côte d'Ivoire   \n",
-       "3  15   108-VN-T01  Pre-PQ Process   SCMS-78   ASN-50        Vietnam   \n",
-       "4  16   108-VN-T01  Pre-PQ Process   SCMS-81   ASN-55        Vietnam   \n",
+       "   Fulfill Via Shipment Mode  Unit of Measure (Per Pack)  Line Item Quantity  \\\n",
+       "0            0           Air                          30                  19   \n",
+       "1            0           Air                         240                1000   \n",
+       "2            0           Air                         100                 500   \n",
+       "3            0           Air                          60               31920   \n",
+       "4            0           Air                          60               38000   \n",
        "\n",
-       "  Managed By  Fulfill Via Vendor INCO Term Shipment Mode  ...  \\\n",
-       "0   PMO - US  Direct Drop              EXW           Air  ...   \n",
-       "1   PMO - US  Direct Drop              EXW           Air  ...   \n",
-       "2   PMO - US  Direct Drop              FCA           Air  ...   \n",
-       "3   PMO - US  Direct Drop              EXW           Air  ...   \n",
-       "4   PMO - US  Direct Drop              EXW           Air  ...   \n",
+       "   Line Item Value  Pack Price  Unit Price  First Line Designation  \\\n",
+       "0            551.0       29.00        0.97                       1   \n",
+       "1           6200.0        6.20        0.03                       1   \n",
+       "2          40000.0       80.00        0.80                       1   \n",
+       "3         127360.8        3.99        0.07                       1   \n",
+       "4         121600.0        3.20        0.05                       1   \n",
        "\n",
-       "  Unit of Measure (Per Pack) Line Item Quantity Line Item Value Pack Price  \\\n",
-       "0                         30                 19           551.0      29.00   \n",
-       "1                        240               1000          6200.0       6.20   \n",
-       "2                        100                500         40000.0      80.00   \n",
-       "3                         60              31920        127360.8       3.99   \n",
-       "4                         60              38000        121600.0       3.20   \n",
+       "   Line Item Insurance (USD)  Scheduled Delivery Date Year  ...  \\\n",
+       "0                 241.243885                          2006  ...   \n",
+       "1                 241.243885                          2006  ...   \n",
+       "2                 241.243885                          2006  ...   \n",
+       "3                 241.243885                          2006  ...   \n",
+       "4                 241.243885                          2006  ...   \n",
        "\n",
-       "  Unit Price             Manufacturing Site First Line Designation  \\\n",
-       "0       0.97     Ranbaxy Fine Chemicals LTD                    Yes   \n",
-       "1       0.03      Aurobindo Unit III, India                    Yes   \n",
-       "2       0.80  ABBVIE GmbH & Co.KG Wiesbaden                    Yes   \n",
-       "3       0.07  Ranbaxy, Paonta Shahib, India                    Yes   \n",
-       "4       0.05      Aurobindo Unit III, India                    Yes   \n",
+       "   Manufacturing Site_Ranbaxy per Shasun Pharma Ltd  \\\n",
+       "0                                             False   \n",
+       "1                                             False   \n",
+       "2                                             False   \n",
+       "3                                             False   \n",
+       "4                                             False   \n",
        "\n",
-       "  Weight (Kilograms) Freight Cost (USD) Line Item Insurance (USD)  \n",
-       "0                 13             780.34                       NaN  \n",
-       "1                358             4521.5                       NaN  \n",
-       "2                171            1653.78                       NaN  \n",
-       "3               1855           16007.06                       NaN  \n",
-       "4               7590           45450.08                       NaN  \n",
+       "   Manufacturing Site_Ranbaxy, Paonta Shahib, India  \\\n",
+       "0                                             False   \n",
+       "1                                             False   \n",
+       "2                                             False   \n",
+       "3                                              True   \n",
+       "4                                             False   \n",
        "\n",
-       "[5 rows x 33 columns]"
+       "   Manufacturing Site_Remedica, Limassol, Cyprus  \\\n",
+       "0                                          False   \n",
+       "1                                          False   \n",
+       "2                                          False   \n",
+       "3                                          False   \n",
+       "4                                          False   \n",
+       "\n",
+       "   Manufacturing Site_Roche Basel  Manufacturing Site_Roche Madrid  \\\n",
+       "0                           False                            False   \n",
+       "1                           False                            False   \n",
+       "2                           False                            False   \n",
+       "3                           False                            False   \n",
+       "4                           False                            False   \n",
+       "\n",
+       "   Manufacturing Site_Standard Diagnostics, Korea  \\\n",
+       "0                                           False   \n",
+       "1                                           False   \n",
+       "2                                           False   \n",
+       "3                                           False   \n",
+       "4                                           False   \n",
+       "\n",
+       "   Manufacturing Site_Strides, Bangalore, India.  \\\n",
+       "0                                          False   \n",
+       "1                                          False   \n",
+       "2                                          False   \n",
+       "3                                          False   \n",
+       "4                                          False   \n",
+       "\n",
+       "   Manufacturing Site_Trinity Biotech, Plc  \\\n",
+       "0                                    False   \n",
+       "1                                    False   \n",
+       "2                                    False   \n",
+       "3                                    False   \n",
+       "4                                    False   \n",
+       "\n",
+       "   Manufacturing Site_Weifa A.S., Hausmanngt. 6, P.O. Box 9113 GrÃ¸nland, 0133, Oslo, Norway  \\\n",
+       "0                                              False                                           \n",
+       "1                                              False                                           \n",
+       "2                                              False                                           \n",
+       "3                                              False                                           \n",
+       "4                                              False                                           \n",
+       "\n",
+       "   Manufacturing Site_bioLytical Laboratories  \n",
+       "0                                       False  \n",
+       "1                                       False  \n",
+       "2                                       False  \n",
+       "3                                       False  \n",
+       "4                                       False  \n",
+       "\n",
+       "[5 rows x 772 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#original data\n",
-    "data= 'Original Data\\SCMS_Delivery_History_Dataset.csv'\n",
+    "#data= 'Original Data\\SCMS_Delivery_History_Dataset.csv'\n",
+    "#df = pd.read_csv(data)\n",
+    "#df.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "data= 'E:/code work/mlops proj/Original Data/CleanedData.csv'\n",
     "df = pd.read_csv(data)\n",
     "df.head()"
    ]
@@ -569,6 +624,13 @@
     "df_75.head()\n",
     "df_75.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
